Services added in Swagger file and updated in services file
